--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 body {
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+body {
     font-family: sans-serif;
     background-color: #f0f0f0;
     text-align: center;
