--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('background.jpg');
+    background-image: url('Tak berjudul17_20250411095236.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
